--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,27 +1,7 @@
-#container {
-  text-align: center;
-
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
-}
-
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
-}
-
-#container p {
-  font-size: 16px;
-  line-height: 22px;
-
-  color: #8c8c8c;
-
-  margin: 0;
-}
-
-#container a {
-  text-decoration: none;
-}
+ ion-content{
+  --ion-background-color: #00f9bb;
+  --ion-background-color: -moz-linear-gradient(top,  #00f9bb 4%, #0afbc1 24%);
+  --ion-background-color: -webkit-linear-gradient(top,  #00f9bb 4%,#0afbc1 24%);
+  --ion-background-color: linear-gradient(to bottom,  #00f9bb 4%,#0afbc1 24%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00f9bb', endColorstr='#0afbc1',GradientType=0 );
+ }
