Tela de login quase finalizada

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,6 +1,6 @@
 <ion-content [fullscreen]="true">
   <div>
-    <ion-button id="btnEntrar">Entrar</ion-button>
+    <ion-button id="btnEntrar" (click)="btnEntrar()">Entrar</ion-button>
     <ion-button fill="outline" id="btnCadastrar">Cadastrar-se</ion-button>
   </div>
 </ion-content>
