Fontes de algumas legendas aumentadas, centralizei o logo do app e preparei o ambiente android

--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -7,7 +7,9 @@
       </ion-button>
     </ion-buttons>
 
+    <div id="divAjuste">
       <img src= "/assets/travellogo.png" id="logoPrincipal"> <!--Usar esta tag para utilizar imagens-->
+    </div>
 
   </ion-toolbar>
 </ion-header>
