--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -16,22 +16,25 @@
 
 <ion-content>
   <div id="divPrincipal">
+      <h3>Entrar</h3>
+      <p id="Descricao">preencha os campos abaixo para continuar</p>
 
-    <h3>Entrar</h3>
-    <p id="Descricao">preencha os dados abaixo para continuar</p>
-
-      <ion-item>
+    <div id="divDados">
+      <ion-item lines="full">
         <ion-label position="floating">Email:</ion-label>
         <ion-input type="email" placeholder="Digite aqui o email" required></ion-input>
       </ion-item>
 
-      <ion-item>
+      <ion-item lines="full">
         <ion-label position="floating">Senha:</ion-label>
         <ion-input type="password" placeholder="Digite aqui a senha" required></ion-input>
         <ion-icon slot="end" name="eye-outline" id="eye"></ion-icon>
       </ion-item>
+    </div>
 
-    <a id="EsqueceuSenha">Esqueceu sua senha?</a>
+    <div id="EsqueceuSenha">
+      <a>Esqueceu sua senha?</a>
+    </div>
 
     <ion-button id="entrarConta">
       Entrar
@@ -42,9 +45,11 @@
       <a id="cadastreSe">Cadastre-se</a>
     </div>
 
+    <div id="divField">
       <fieldset>
         <legend>Ou entre com</legend>
       </fieldset>
+    </div>
 
     <div id="divAcessos">
       <ion-button class="redesSociais">
