--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -4,7 +4,7 @@
   </div>
 
   <div id="divBtn">
-    <ion-button id="btnEntrar" (click)="btnEntrar()">Entrar</ion-button>
-    <ion-button fill="outline" id="btnCadastrar" (click)="btnCadastrar()">Cadastrar-se</ion-button>
+    <ion-button id="btnEntrar" (click)="btnEntrar()" expand="full" shape="round">Entrar</ion-button>
+    <ion-button id="btnCadastrar" (click)="btnCadastrar()" fill="outline" expand="full" shape="round">Cadastrar-se</ion-button>
   </div>
 </ion-content>
