--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -19,37 +19,33 @@
       <h3>Entrar</h3>
       <p id="Descricao">preencha os campos abaixo para continuar</p>
 
-    <div id="divDados">
-      <ion-item lines="full">
-        <ion-label position="floating">Email:</ion-label>
-        <ion-input type="email" placeholder="Digite aqui o email" required></ion-input>
-      </ion-item>
+        <ion-item lines="full">
+          <ion-label position="floating">Email</ion-label>
+          <ion-input type="email" placeholder="Digite aqui o email" required></ion-input>
+        </ion-item>
 
-      <ion-item lines="full">
-        <ion-label position="floating">Senha:</ion-label>
-        <ion-input type="password" placeholder="Digite aqui a senha" required></ion-input>
-        <ion-icon slot="end" name="eye-outline" id="eye"></ion-icon>
-      </ion-item>
-    </div>
+        <ion-item lines="full">
+          <ion-label position="floating">Senha</ion-label>
+          <ion-input type="password" placeholder="Digite aqui a senha" required></ion-input>
+          <ion-icon slot="end" name="eye-outline" id="eye"></ion-icon>
+        </ion-item>
 
-    <div id="EsqueceuSenha">
+    <div id="divEsqueceuSenha">
       <a>Esqueceu sua senha?</a>
     </div>
 
-    <ion-button id="entrarConta">
+    <ion-button id="btnEntrarConta" expand="full" shape="round">
       Entrar
     </ion-button>
 
     <div id="divCriarConta">
       <label>Não tem conta?&nbsp;</label>
-      <a id="cadastreSe">Cadastre-se</a>
+      <a>Cadastre-se</a>
     </div>
 
-    <div id="divField">
       <fieldset>
         <legend>Ou entre com</legend>
       </fieldset>
-    </div>
 
     <div id="divAcessos">
       <ion-button class="redesSociais">
