--- a/src/app/login/login.page.scss
+++ b/src/app/login/login.page.scss
@@ -43,6 +43,7 @@ ion-content{
   height: calc(100% - 16px);
   text-align: center;
   border-radius: 20px 20px 0px 0px;
+  padding: 0px 17px 0px 17px;
 }
 
 /*============================================================================================================*/
@@ -61,10 +62,6 @@ h3{
 
 /*============================================================================================================*/
 
-#divDados{
-  padding: 0px 17px 0px 17px;
-}
-
 ion-item{
   font-size: 14px;
   color: black;
@@ -74,59 +71,53 @@ ion-item{
 
 #eye{
   color: #707070;
-  padding-top: 25px;
+  padding-top: 19px;
   font-size: 20px;
 }
 
 /*============================================================================================================*/
 
-#EsqueceuSenha{
-  margin-top: 4%;
-  margin-bottom: 6%;
+#divEsqueceuSenha{
+  margin-top: 3%;
+  margin-bottom: 8%;
   float: right; // conteudo para direita
-  padding-right: 17px;
-}
-
-#EsqueceuSenha a{
-  color: black;
   text-decoration: underline;
   font-size: 12px;
   font-weight: bold;
 }
 
+#divEsqueceuSenha a{
+  color: black;
+}
+
 /*============================================================================================================*/
 
-#entrarConta{
+#btnEntrarConta{
   height: 30px;
-  width: 88%;
   font-size: 14px;
   text-transform: none;
   font-weight: bold;
   color: white;
-  --border-radius: 20px;
+  font-family: "Segoe UI";
   --background: #00f9bb;
 }
 
 /*============================================================================================================*/
 
 #divCriarConta{
-  margin-top: 6%;
+  margin-top: 26%;
   margin-bottom: 6%;
   color:black;
   font-size: 12px;
   font-weight: bold;
 }
 
-#cadastreSe{
+#divCriarConta a{
   color: black;
   text-decoration: underline;
 }
 
 /*============================================================================================================*/
-
-#divField{
-  padding: 0px 17px 0px 17px;
-}
 
 fieldset {
   border-top: 1px solid #707070;
