--- a/src/app/confirmar-email/confirmar-email.page.scss
+++ b/src/app/confirmar-email/confirmar-email.page.scss
@@ -30,8 +30,11 @@ ion-content{
   --ion-background-color: -webkit-linear-gradient(top,  #00f9bb 4%,#0afbc1 24%);
   --ion-background-color: linear-gradient(to bottom,  #00f9bb 4%,#0afbc1 24%);
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00f9bb', endColorstr='#0afbc1',GradientType=0 );
-  font-family: "Segoe UI";
   height: 100%;
+}
+
+*{
+  font-family: "Segoe UI";
 }
 
 /*============================================================================================================*/
@@ -65,29 +68,31 @@ h3{
 
 /*============================================================================================================*/
 
+#divContexto{
+  color:black;
+  padding: 0px 20px 0px 20px;
+}
+
+#divContexto h4{
+  font-size: 18px;
+  line-height: 1.5;
+}
+
+/*============================================================================================================*/
+
+#divCodigo{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 ion-item{
   font-size: 14px;
   color: black;
   --border-color: #707070;
   --background: white;
-}
-
-#eye{
-  color: #707070;
-  padding-top: 19px;
-  font-size: 20px;
-}
-
-/*============================================================================================================*/
-
-#divTermos{
-  margin-top: 3%;
-  margin-bottom: 8%;
-  font-size: 10px;
-}
-
-#divTermos a{
-  text-decoration: underline;
+  padding: 0px 10px 0px 10px;
+  text-align: center;
 }
 
 /*============================================================================================================*/
@@ -99,46 +104,6 @@ ion-item{
   font-weight: bold;
   color: white;
   --background: #00f9bb;
-  font-family: "Segoe UI";
-  margin-bottom: 8%;
+  margin-top: 15%;
 }
 
-/*============================================================================================================*/
-
-fieldset {
-  border-top: 1px solid #707070;
-  border-bottom: none;
-  border-left: none;
-  border-right: none;
-  display: block;
-  margin:auto;
-  position: center;
-}
-
-fieldset legend {
-  padding: 5px 5px;
-  padding-top: 0px;
-  font-size: 14px;
-  font-weight: bold;
-}
-
-/*============================================================================================================*/
-
-#divAcessos {
-  padding-right: 15px; // este valor deve ser o mesmo do margin-left de ".redesSociais"
-  margin-top: -5%
-}
-
-.redesSociais{
-  width: 36px;
-  height: 36px;
-  --border-radius: 20px;
-  margin-left: 15px; // !!!
-  --background: #ffffff;
-}
-
-ion-img{
-  width: 24px;
-  height: 26px;
-  margin-top: 45%;
-}
