--- a/src/app/cadastro/cadastro.page.html
+++ b/src/app/cadastro/cadastro.page.html
@@ -20,9 +20,23 @@
     <h3>Cadastrar-se</h3>
     <p id="Descricao">preencha os campos abaixo</p>
 
+    <div id="stepProgressBar">
+
+        <div class="bulletProgress">
+          <ion-icon name="checkmark-circle-outline" class="check"></ion-icon>
+      </div>
+        <div class="bulletProgress">
+          <ion-icon name="checkmark-circle-outline" class="check"></ion-icon>
+        </div>
+        <div class="bullet">
+          <ion-icon name="checkmark-circle-outline" class="check"></ion-icon>
+        </div>
+
+    </div>
+
     <ion-item lines="full">
       <ion-label position="floating">Nome</ion-label>
-      <ion-input type="text" placeholder="Digite aqui o email" required></ion-input>
+      <ion-input type="text" placeholder="Digite aqui o nome" required></ion-input>
     </ion-item>
 
     <ion-item lines="full">
@@ -33,13 +47,11 @@
     <ion-item lines="full">
       <ion-label position="floating">Senha</ion-label>
       <ion-input type="password" placeholder="Digite aqui a senha" required></ion-input>
-      <ion-icon slot="end" name="eye-outline" id="eye"></ion-icon>
     </ion-item>
 
     <ion-item lines="full">
       <ion-label position="floating">Confirmar senha</ion-label>
-      <ion-input type="password" placeholder="Digite aqui a senha" required></ion-input>
-      <ion-icon slot="end" name="eye-outline" id="eye"></ion-icon>
+      <ion-input type="password" placeholder="Confirme aqui a senha" required></ion-input>
     </ion-item>
 
     <div id="divTermos">
