--- a/src/app/cadastro/cadastro.page.scss
+++ b/src/app/cadastro/cadastro.page.scss
@@ -62,6 +62,41 @@ h3{
 
 /*============================================================================================================*/
 
+#stepProgressBar{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+}
+
+.bullet{
+  color: black;
+  position: relative;
+  margin-left: 10%;
+  margin-right: 10%;
+}
+
+.bulletProgress{
+  position: relative;
+  margin-left: 10%;
+  margin-right: 10%;
+}
+
+.bulletProgress::after{
+  content: '';
+  position: absolute;
+  width: 64px;
+  height: 1px;
+  background: #707070;
+  left: 16px;
+  bottom: 12px;
+}
+
+.check{
+  font-size: 18px;
+  color: #707070;
+  background-color: white;
+}
 
 /*============================================================================================================*/
 
@@ -70,19 +105,14 @@ ion-item{
   color: black;
   --border-color: #707070;
   --background: white;
-}
-
-#eye{
-  color: #707070;
-  padding-top: 19px;
-  font-size: 20px;
+  --min-height: 16px;
 }
 
 /*============================================================================================================*/
 
 #divTermos{
-  margin-top: 3%;
-  margin-bottom: 8%;
+  margin-top: 6%;
+  margin-bottom: 6%;
   font-size: 10px;
 }
 
@@ -125,16 +155,19 @@ fieldset legend {
 /*============================================================================================================*/
 
 #divAcessos {
-  padding-right: 15px; // este valor deve ser o mesmo do margin-left de ".redesSociais"
-  margin-top: -5%
+  margin-top: -5%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .redesSociais{
   width: 36px;
   height: 36px;
   --border-radius: 20px;
-  margin-left: 15px; // !!!
   --background: #ffffff;
+  margin-left: 3%;
+  margin-right: 3%;
 }
 
 ion-img{
