--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -2,7 +2,7 @@
   <ion-toolbar>
 
     <ion-buttons slot="start">
-      <ion-button>
+      <ion-button (click)="btnVoltar()">
         <ion-icon slot="icon-only" name="chevron-back-outline" id="btnBack"></ion-icon>
       </ion-button>
     </ion-buttons>
