--- a/src/app/cadastro/cadastro.page.html
+++ b/src/app/cadastro/cadastro.page.html
@@ -2,7 +2,7 @@
   <ion-toolbar>
 
     <ion-buttons slot="start">
-      <ion-button>
+      <ion-button (click)="btnVoltar()">
         <ion-icon slot="icon-only" name="chevron-back-outline" id="btnBack"></ion-icon>
       </ion-button>
     </ion-buttons>
@@ -22,15 +22,23 @@
 
     <div id="stepProgressBar">
 
+      <div class="step">
         <div class="bulletProgress">
-          <ion-icon name="checkmark-circle-outline" class="check"></ion-icon>
+          <ion-icon name="checkmark-outline" class="check"></ion-icon>
+        </div>
       </div>
+
+      <div class="step">
         <div class="bulletProgress">
-          <ion-icon name="checkmark-circle-outline" class="check"></ion-icon>
+          <ion-icon name="checkmark-outline" class="check"></ion-icon>
         </div>
+      </div>
+
+      <div class="step">
         <div class="bullet">
-          <ion-icon name="checkmark-circle-outline" class="check"></ion-icon>
+          <ion-icon name="checkmark-outline" class="check"></ion-icon>
         </div>
+      </div>
 
     </div>
 
