--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,3 +1,8 @@
+*{
+  padding: 0;
+  margin: 0;
+}
+
 ion-content{
   --ion-background-color: #00f9bb;
   --ion-background-color: -moz-linear-gradient(top,  #00f9bb 4%, #0afbc1 24%);
@@ -14,13 +19,15 @@ ion-content{
 }
 
 #logoInicial{
-  width: 40%;
+  width: 35%;
 }
 
 #divBtn{
-  place-items: center;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
   margin-top: 70%;
-  padding: 17px;
+  padding: 17px 17px 17px 17px;
 }
 
 #btnEntrar{
