Tela de ulimo passo quase finalizada

--- a/src/app/confirmar-email/confirmar-email.page.scss
+++ b/src/app/confirmar-email/confirmar-email.page.scss
@@ -77,37 +77,55 @@ h3{
   margin-left: 10%;
   margin-right: 10%;
   position: relative;
+  border: 1px solid #707070;
+  border-radius: 20px;
+  width: 15px;
+  height: 15px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   background: white;
+  color: #707070;
+}
+
+.stepComplete{
+  margin-left: 10%;
+  margin-right: 10%;
+  position: relative;
+  border: 1px solid #00f9bb;
+  border-radius: 20px;
+  width: 15px;
+  height: 15px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: white;
+  color: #00f9bb;
 }
 
 .bulletProgressComplete::after{
   content: '';
   position: absolute;
-  width: 64px;
+  width: 63px;
   height: 1px;
   background: #00f9bb;
-  left: 16px;
-  bottom: 12px;
+  left: 14px;
+  bottom: 6px;
 }
 
 .bulletProgress::after{
   content: '';
   position: absolute;
-  width: 64px;
+  width: 63px;
   height: 1px;
   background: #707070;
-  left: 16px;
-  bottom: 12px;
-}
-
-.bulletProgressComplete .check{
-  font-size: 18px;
-  color: #00f9bb;
+  left: 14px;
+  bottom: 6px;
 }
 
 .check{
-  font-size: 18px;
-  color: #707070;
+  font-size: 13px;
+  border-radius: 20px;
 }
 
 /*============================================================================================================*/
